# bread

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Network/: Network.cpp  Network.h
Network/matrixMath/: matrixMath.cpp  matrixMath.h
src/data/: output.txt  vocabulary.txt
src/data/saves/: fastSave.txt
user Interface/: Menu.cpp  Menu.h
